--- a/application/templates/selfDevelopmentTools/todo_daily.html
+++ b/application/templates/selfDevelopmentTools/todo_daily.html
@@ -113,6 +113,32 @@
               }
             }
 
+            // Add a "checked" symbol when clicking on a list item
+            var list = document.getElementById('myUL');
+            console.log("The list is"+list.innerHTML)
+            list.addEventListener('click', function(ev) {
+                console.log("I am here")
+                if (ev.target.tagName === 'LI') {
+                  var task_id = ev.target.nextElementSibling.nextElementSibling.innerHTML
+                  console.log("the task id is")
+                  console.log(task_id)
+                  ev.target.classList.toggle('checked');                   
+                  var xhttp = new XMLHttpRequest();
+                  xhttp.onreadystatechange = function() {
+                  if (this.readyState == 4 && this.status == 200) {
+                      console.log(this.responseText)
+                    }
+                  };
+                  xhttp.open("PUT", "{{ url_for('dailytodo')}}/"+task_id, true);
+                  xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+                  if (ev.target.classList.contains('checked')) {
+                    xhttp.send("status=Completed");
+                  }
+                  else {
+                    xhttp.send("status=In Progress")
+                  }
+                }
+            }, false);
 
 
             var coll = document.getElementsByClassName("check_info");
@@ -123,6 +149,7 @@
 
             function click_check_info() {
               console.log(this)
+              console.log("I am here 2")
               var content = this.parentElement.nextElementSibling;
                 var task_id = this.parentElement.nextElementSibling.nextElementSibling.innerHTML
                 var xhttp = new XMLHttpRequest();
@@ -150,37 +177,16 @@
                 console.log(this)
             }
 
-            // Add a "checked" symbol when clicking on a list item
-            var list = document.querySelector('ul');
-            list.addEventListener('click', function(ev) {
-                if (ev.target.tagName === 'LI') {
-                  var task_id = ev.target.nextElementSibling.nextElementSibling.innerHTML
-                  console.log("the task id is")
-                  console.log(task_id)
-                  ev.target.classList.toggle('checked');                   
-                  var xhttp = new XMLHttpRequest();
-                  xhttp.onreadystatechange = function() {
-                  if (this.readyState == 4 && this.status == 200) {
-                      console.log(this.responseText)
-                    }
-                  };
-                  xhttp.open("PUT", "{{ url_for('dailytodo')}}/"+task_id, true);
-                  xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-                  if (ev.target.classList.contains('checked')) {
-                    xhttp.send("status=Completed");
-                  }
-                  else {
-                    xhttp.send("status=In Progress")
-                  }
-                }
-            }, false);
-
             // Create a new list item when clicking on the "Add" button
             function newElement() {
               var xhttp = new XMLHttpRequest();
               var inputValue = document.getElementById("myInput").value;
-              var descriptionValue = document.getElementById("myDescription").value;
-              xhttp.onreadystatechange = function() {
+              if (inputValue === '') {
+                alert("You must add something for the task title!");
+              }
+              else {
+                var descriptionValue = document.getElementById("myDescription").value;
+                xhttp.onreadystatechange = function() {
                 if (this.readyState == 4 && this.status == 200) {
                   var li = document.createElement("li");
                   var task_info_div = document.createElement('div');
@@ -188,13 +194,9 @@
                   console.log(typeof inputValue)
                   var t = document.createTextNode(inputValue);
                   li.appendChild(t);
-                  if (inputValue === '') {
-                    alert("You must add something for the task title!");
-                  } else {
-                    document.getElementById("myUL").appendChild(li);
-                    document.getElementById("myUL").appendChild(task_info_div);
-                    document.getElementById("myUL").appendChild(task_id_div);
-                  }
+                  document.getElementById("myUL").appendChild(li);
+                  document.getElementById("myUL").appendChild(task_info_div);
+                  document.getElementById("myUL").appendChild(task_id_div);
                   document.getElementById("myInput").value = "";
                   document.getElementById("myDescription").value = "";
 
@@ -226,17 +228,17 @@
                   task_id_div.setAttribute("style", "display: none;")
                   task_info_div.innerHTML = "<p>Date Added: {{ date }}</p><p>Description: "+descriptionValue+"</p><p>Status: In Progress</p>";
                   task_info_div.setAttribute("class", "collapsible-content")
-                }
-                else if(this.readyState == 4 && this.status == 500){
-                  document.getElementById("myInput").value = "";
-                  document.getElementById("myDescription").value = "";
-                  alert(this.responseText)
-                }
-              };
-              xhttp.open("POST", "{{ url_for('dailytodo')}}", true);
-              xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-              xhttp.send("status=In Progress&title="+inputValue+"&date={{ date }}&description="+descriptionValue);
-
+                  }
+                  else if(this.readyState == 4 && this.status == 500){
+                    document.getElementById("myInput").value = "";
+                    document.getElementById("myDescription").value = "";
+                    alert(this.responseText)
+                  }
+                };
+                xhttp.open("POST", "{{ url_for('dailytodo')}}", true);
+                xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+                xhttp.send("status=In Progress&title="+inputValue+"&date={{ date }}&description="+descriptionValue);
+              }
             }
 
         </script>
