--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>UTA - Home Page</title>
+    <title>TODOKAR</title>
+    <link rel="icon" href="http://sstatic.net/stackoverflow/img/favicon.ico">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static',filename='css/main.css')}}"/>
+    <link rel="stylesheet" href="{{ url_for('static',filename='css/view_tasks.css')}}"/>
+    <link rel="stylesheet" href="{{ url_for('static',filename='css/todo_nav.css')}}"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
@@ -20,7 +23,7 @@
     </div>
 {% endif %}
 
-<div class="container-fluid" style="{% if not 1 %}background-image: url('static/images/night_fury_PNG59_0.12Opacity.png'){% endif %};background-size: 100% 100%;height:100%;">
+<div class="container-fluid main" style="{% if not 1 %}background-image: url('static/images/night_fury_PNG59_0.12Opacity.png'){% endif %};background-size: 100% 100%;height:100%;">
 
     <!-- <h3>  </h3> -->
 
