--- a/application/templates/selfDevelopmentTools/todo_nav.html
+++ b/application/templates/selfDevelopmentTools/todo_nav.html
@@ -3,5 +3,80 @@
                 <a href="{{ url_for('todo_all') }}" class="nav-link {% if todo_all %}active{% endif %}"><i class="fa fa-tasks" aria-hidden="true"></i> Your Tasks</a>
                 <a href="{{ url_for('todo_progress') }}" class="nav-link {% if todo_progress %}active{% endif %}"><i class="fa fa-bar-chart" aria-hidden="true"></i> Task Progress</a>
                 <a href="{{ url_for('todo') }}" class="nav-link {% if todo_manage %}active{% endif %}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Manage Tasks</a>
+                <button onclick="openAddForm()" class="extrabtn" style="float: right;display: inline-block;"><i class="fa fa-plus" aria-hidden="true"></i> New Task</button>
+                <div class="form-popup" id="newAddForm">
+				  <form class="form-container">
+				    <h1>Add a New task</h1>
+
+				    <label for="tasktitle"><b>Task Title:</b></label>
+				    <input type="text" placeholder="Enter Task Title" id="tasktitle" required>
+
+				    <label for="taskdesc"><b>Task Description:</b></label>
+				    <input type="text" placeholder="Enter Task Notes" id="taskdesc">
+
+				    <label for="prioritysetting"><b>Priority:</b></label>
+				    <div id=prioritysetting>
+				    	<input type="radio" id="p1" value="P1">
+						<label for="p1">P1</label>
+						<input type="radio" id="p2" value="P2">
+						<label for="p2">P2</label>
+						<input type="radio" id="p3" value="P3">
+						<label for="p3">P3</label>
+						<input type="radio" id="p4" value="P3">
+						<label for="p4">P4</label>
+				    </div>
+
+				    <label for="deadline">Enter the date till which you want the task to be completed:</label>
+                    <input type="date" id="deadline" name="date" required>
+
+				    <button type="submit" class="btn" onclick="closeAddForm()">Add</button>
+				    <!-- <button type="button" class="btn cancel" onclick="closeAddForm()">Close</button> -->
+				  </form>
+				</div>
             </div>
+
+
+            <script>
+				function openAddForm() {
+					console.log("I am in open form")
+				  if (document.getElementById("newAddForm").style.display === "block"){
+				  	document.getElementById("newAddForm").style.display = "none";
+				  }
+				  else {
+				  	document.getElementById("newAddForm").style.display = "block";
+				  }
+				}
+
+				function closeAddForm() {
+					var tasktitle = document.getElementById("tasktitle").value;
+					var taskdescription = document.getElementById("taskdesc").value;
+					var deadline = document.getElementById('deadline').value; 
+					var priorityvalues = document.getElementById('prioritysetting'); 
+					var c = priorityvalues.childNodes;
+
+					console.log("The priorityvalues are"+priorityvalues)
+              
+		            for(i = 0; i < c.length; i++) { 
+		                if(c[i].checked) 
+		                var priority = c[i].value; 
+		            } 
+
+				  	document.getElementById("newAddForm").style.display = "none";
+				  	var xhttp = new XMLHttpRequest();
+		            xhttp.onreadystatechange = function() {
+		                if (this.readyState == 4 && this.status == 200) {
+		                    console.log("I am in add new")
+		                    console.log(this.responseText)
+		                    // description.style.display = "none"
+		                    // div.style.display = "none";
+		                }
+		                else if(this.readyState == 4 && this.status == 500){
+		                  alert(this.responseText)
+		                }
+		            };
+		            xhttp.open("POST", "{{ url_for('dailytodo')}}", true);
+		            xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+		            xhttp.send("status=In Progress&title="+tasktitle+"&description="+taskdescription+"&priority="+priority+"&deadline="+deadline);
+					}
+			</script>
 </header>
